# zpr_skeleton

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  MANIFEST.in  README.md  main.cpp  requirements.txt  run_app.py  setup.py
docs/: Doxyfile  Makefile  conf.py  index.rst  python_code.rst
docs/_generate/: distribution.add.rst  distribution.subtract.rst  python_cpp_example.add.rst  python_cpp_example.subtract.rst
example_data/: c_file.csv  discr1.csv  discr2.csv  e_file.csv  f_file.csv
src/distribution/: __init__.py  __main__.py  app.py  b_file.csv  bindings.cpp  math.cpp  math.hpp  report.py  report_template.html  workspace_helpers.py
src/distribution/static/: main.89cb555ddeb661a7146a.js
src/distribution/templates/: index.html
src/python_cpp_example/: __main__.py  bindings.cpp  math.cpp  math.hpp
tests/: cpp_test.py  math_test.py  test_math.cpp
